test/spec_vectors/global/fail/module_37.wat
(module (global $x (mut i32) (i32.const 0)) (func $type-global.set-value-empty (global.set $x)))